Don't remove info dialogs from the document flow to prevent large dialogs, like those in the source browser, from overlapping with important page content.

--- a/trac-files/common/css/browser.css
+++ b/trac-files/common/css/browser.css
@@ -167,7 +167,9 @@ table.chglist { margin-top: 0 }
 #paging { margin: 1em 0 }
 
 /* Styles for the revision info in the file view (see also trac.css) */
-#info { margin: 0; }
+#info {
+    width: 100%;
+}
 #info .props {
  color: #666;
  list-style: square;
